<resources>
    <string name="app_name">SiteUp</string>
    <string name="logout_dialog">Do you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_profile">Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>School List</item>
        <item>Profile</item>
        <item>Change Password</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_list">Student List</string>
    <string name="dashboard">Dashboard</string>
    <string name="upload_project">Upload Project</string>
    <string name="no_network_error_message">No Internet Connection</string>
    <string name="site_up">SiteUp</string>
    <string name="enter_number">Enter Number</string>
    <string name="show_map">Show Map</string>
    <string name="reason">Reason</string>
    <string name="site_approval">Site Approval</string>
    <string name="submit">Submit</string>
    <string name="report_issue">Report Issue</string>
    <string name="enter_mobile_muber">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="what_is_your_phone_number">What is your mobile number?</string>
    <string name="create_password">Create Password</string>
    <string name="show_password">Show Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <string-array name="spinnerItems">
        <item>Select Role</item>
        <item>Site Engineer</item>
        <item>Vendor PM</item>
        <item>Cisco PM</item>
        <item>Customer PM</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_preview">PreviewActivity</string>


</resources>
